[package]
name = "nshare"
version = "0.9.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Conversion between n-dimensional types in different Rust crates"
documentation = "https://docs.rs/nshare/"
repository = "https://github.com/rust-cv/nshare"
keywords = ["ndarray", "nalgebra", "image", "convert", "borrow"]
categories = ["rust-patterns", "no-std"]
license = "MIT"
readme = "README.md"

[features]
default = ["nalgebra", "nalgebra_std", "ndarray", "image"]
nalgebra_std = ["nalgebra/std"]

[dependencies]
ndarray = { version = "0.15.6", default-features = false, optional = true }
nalgebra = { version = "0.32.1", default-features = false, optional = true }
image = { version = "0.24.0", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
